# ThesisDataPublic

PySMF/: pyproject.toml
PySMF/pysmf/: __init__.py  main.py  windows.txt
PySMF/pysmf/analysis/: multisite.py  singlesite.py
PySMF/pysmf/core/: bamobject.py  sparsematrix.py
PySMF/pysmf/utils/: regions.py
