[tool.poetry]
name = "pysmf"
version = "0.1.0"
description = ""
authors = ["F Hyde"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13.3"
pysam = "^0.23.3"
pandas = "^2.3.3"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
